--- a/src/main/webapp/404.html
+++ b/src/main/webapp/404.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    <title>Page Not Found</title>
+    <title>Página não encontrada</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="favicon.ico" />
     <style>
@@ -51,8 +51,8 @@
     </style>
   </head>
   <body>
-    <h1>Page Not Found</h1>
-    <p>Sorry, but the page you were trying to view does not exist.</p>
+    <h1>Página não encontrada</h1>
+    <p>Desculpe, mas a página que você estava tentando visualizar não existe.</p>
   </body>
 </html>
 <!-- IE needs 512+ bytes: http://blogs.msdn.com/b/ieinternals/archive/2010/08/19/http-error-pages-in-internet-explorer.aspx -->
